[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=2]
[ext_resource path="res://scripts/LootManager.gd" type="Script" id=3]
[ext_resource path="res://scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://scripts/VirtualJoystick.gd" type="Script" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LootManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 640, 360 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="VirtualJoystick" type="Control" parent="UI"]
rect_min_size = Vector2( 150, 150 )
script = ExtResource( 5 )
